--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -11,7 +11,7 @@
     <a href="/">Volver a la lista de productos</a>
 
     <h1>Login</h1>
-    <form action="/api/sessions/login" method="POST">
+    <form action="/sessions/login" method="POST">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
 
@@ -20,7 +20,7 @@
 
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="/api/sessions/register">Register</a></p>
-    <a href="/api/sessions/github">Enter with GitHub</a>
+    <p>Don't have an account? <a href="/sessions/register">Register</a></p>
+    <a href="/sessions/github">Enter with GitHub</a>
 </body>
 </html>
