--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -11,7 +11,7 @@
     <a href="/">Volver a la lista de productos</a>
 
     <h1>Registro de Usuario</h1>
-    <form action="/api/sessions/register" method="POST">
+    <form action="/sessions/register" method="POST">
         <label for="first_name">Nombre:</label>
         <input type="text" name="first_name" required>
         
